syntax = "proto3";

package common;

option go_package = "common/api";

service ApiService {
  rpc ClientInfo (stream ClientInfoReq) returns (ClientInfoRes) {}
  rpc Result (ResultReq) returns (ResultRes) {}
}

/////////////////////////////////////////////////////////system////////////////////////////////////////////////////////

message ClientInfoReq{
  Cpu cpu = 1;
  Ram ram = 2;
  Disk disk = 3;
  repeated Nvidia nvidia = 4;
  IntelGPU intelGPU = 5;
  NetSpeed netSpeed = 6;
  Software software = 7;
}

message ClientInfoRes{
  int32 code = 1;
  string msg = 2;
}

message Software{
  string systemHostname = 1;
  string systemVersion = 2;
  string systemRuntime = 3;
  string systemModel = 4;
  string kernelVersion = 5;
  string mac = 6;
}

message Engine{
  string name = 1;
  float busy = 2;
  float sema = 3;
  float wait = 4;
  string busyStr = 5;
  string semaStr = 6;
  string waitStr = 7;
}

message IntelGPU{
  string period = 1;
  string requestedFrequency = 2;
  string actualFrequency = 3;
  string interrupts = 4;
  string rc6 = 5;
  repeated Engine engines = 6;
}

message Cpu{
  repeated double cpus = 1;
  int32 cores = 2;
  string name = 3;
  uint32 temperature = 4;
}

message Ram{
  int32 usedMb = 1;
  int32 totalMb = 2;
  int32 usedPercent = 3;
}

message Disk{
  int32 usedMb = 1;
  int32 usedGb = 2;
  int32 totalMb = 3;
  int32 totalGb = 4;
  int32 usedPercent = 5;
}

message Nvidia{
  string index = 1;
  string name = 2;
  string temperatureGPU = 3;
  string utilizationGPU = 4;
  string utilizationMemory = 5;
  string memoryTotal = 6;
  string memoryFree = 7;
  string memoryUsed = 8;
  string cudaVersion = 9;
  string powerDraw = 10;
  string driverVersion = 11;
}

message NetSpeed{
  float sendSpeed = 1;
  float recvSpeed = 2;
}

message NetInfo{
  string statName = 1;
  string localIpNet = 2;
}

/////////////////////////////////////////////////////////result////////////////////////////////////////////////////////

message ResultReq{
  int32 code = 1;
  string msg = 2;
  Result Data = 3;
}

message Result{
  uint64   id = 1;
  int64  saveTime = 2;  // 保存时间戳
  string image = 3;     // 图片地址
  string rawImage = 4;  // 图片地址
  string video = 5;     // 录制视频地址
  int64  videoSize = 6; // 视频大小
  repeated string flag = 7;
  repeated string banker = 8;
  repeated string player1 = 9;
  repeated string player2 = 10;
  repeated string player3 = 11;
  repeated string other = 12;
  string simpleFlag = 13;
  string simpleBanker = 14;
  string simplePlayer1 = 15;
  string simplePlayer2 = 16;
  string simplePlayer3 = 17;
  string simpleOther = 18;
}

message ResultRes{
  int32 code = 1;
  string msg = 2;
}